slide-container overflow fixed

--- a/css/queries.css
+++ b/css/queries.css
@@ -256,6 +256,10 @@
 }
 
 @media (max-width: 22em) {
+  .heading-secondary {
+    font-size: 5.5rem;
+  }
+
   .hero-img {
     width: 176px;
   }
